@@ -6,6 +6,7 @@ import com.tobeto.pair9.repositories.BrandRepository;
 import com.tobeto.pair9.services.abstracts.BrandService;
 import com.tobeto.pair9.services.dtos.brand.requests.AddBrandRequest;
 import com.tobeto.pair9.services.dtos.brand.requests.UpdateBrandRequest;
+import com.tobeto.pair9.services.dtos.brand.responses.GetByIdBrandResponse;
 import com.tobeto.pair9.services.dtos.brand.responses.GetListBrandResponse;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -18,11 +19,19 @@ import java.util.stream.Collectors;
 public class BrandManager implements BrandService {
     private BrandRepository brandRepository;
     private ModelMapperService modelMapperService;
+
+    @Override
+    public GetByIdBrandResponse getById(int id) {
+        Brand brand = this.brandRepository.findById(id).orElseThrow();
+        GetByIdBrandResponse response = this.modelMapperService.forResponse().map(brand, GetByIdBrandResponse.class);
+
+        return response;
+    }
+
     @Override
     public List<GetListBrandResponse> getAll() {
         List<Brand> brands = brandRepository.findAll();
-        return brands.stream().map(brand -> this.modelMapperService.forResponse().map(brand, GetListBrandResponse.class))
-                .collect(Collectors.toList());
+        return brands.stream().map(brand -> this.modelMapperService.forResponse().map(brand, GetListBrandResponse.class)).toList();
     }
 
     @Override
